--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: sans-serif;
       padding: 2rem;
-      background: #f9f9f9;
+      background: #4E5B6F;
       color: #333;
       max-width: 600px;
       margin: auto;
