--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
       if (!input.value) {
         message = "Start typing...";
       } else if (score < 2) {
-        message = `⚠️ Weak: Oh no! An attacker could guess your password in ${crackTime}. It may be a very common password or a dictionary word. Try a group of unconnected words.`;
+        message = `⚠️ Oh no! An attacker could guess your password in ${crackTime}. It may be a very common password or a dictionary word. Try a group of unconnected words.`;
       } else if (score < 4) {
-        message = `🟡 Medium: You can make it even better. Try adding a few unconnected words. It would take a strong attack ${crackTime} to guess your password.`;
+        message = `🟡 Medium: It would take a strong attack ${crackTime} to guess your password. You can make it even better. Try adding a few unconnected words.`;
       } else {
         message = `✅ Strong: Great job! The strongest attack would take ${crackTime} to guess your password.`;
       }
@@ -59,6 +59,8 @@
       output.textContent = message;
     });
   </script>
+  <p></p>
+  <p></p>
   <p> The zxcvbn programmers were inspired by this xkcd comic:  <img src="https://imgs.xkcd.com/comics/password_strength.png" alt="xkcd webcomic about passwords and password strength"></p>
 </body>
 </html>
