--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <title>Password Strength Checker</title>
   <script src="zxcvbn.js"></script>
   <style>
+    img {
+    width: 100%;
+    }
     body {
       font-family: sans-serif;
       padding: 2rem;
       background: #4E5B6F;
-      color: #333;
+      color: #ffffff;
       max-width: 600px;
       margin: auto;
     }
