--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       font-weight: bold;
       margin-top: 1rem;
       padding: 1rem;
-      background: #eee;
+      background: #6b6b6b;
       border-radius: 4px;
     }
   </style>
