--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
       output.innerHTML = message + "<br><br>" + breakdown;
     });   
   </script>
+// Send value back to Storyline
+  
+if (window.parent && window.parent.SetPlayer) {
+  const player = window.parent.GetPlayer();
+  player.SetVar("PasswordStrength", score >= 4 ? "Strong" : (score >= 2 ? "Medium" : "Weak"));
+}
   <p></p>
   <p></p>
   <p> The zxcvbn programmers were inspired by this xkcd comic:</p>
