--- a/index.html
+++ b/index.html
@@ -37,16 +37,19 @@
   <label for="password">Enter a password:</label>
   <input type="text" id="password" placeholder="e.g., TrickyHorse$83">
   <div class="result" id="output">Start typing...</div>
+  <button onclick="submitToStoryline()">Submit your password strength</button>
 
   <script>
     const input = document.getElementById("password");
     const output = document.getElementById("output");
+    let currentScore = 0;
 
     input.addEventListener("input", () => {
       const result = zxcvbn(input.value);
       const crackTime = result.crack_times_display.offline_fast_hashing_1e10_per_second;
       const score = result.score;
       const sequence = result.sequence;
+      currentScore = score; // store for submittToStoryline()
 
       let message = "";
 
@@ -67,21 +70,21 @@
         const type = part.pattern;
         const dictionary = part.dictionary_name ? ` (${part.dictionary_name} word)` : "";
         breakdown += `<li>${token} → ${type}${dictionary}</li>`;
-    });
+      });
       breakdown += "</ul>";
 
       //Show results
       output.innerHTML = message + "<br><br>" + breakdown;
-     
-      // Send value back to Storyline
-      function submitToStoryline() {
-        if (window.parent && window.parent.GetPlayer) {
-          const player = window.parent.GetPlayer();
-          player.SetVar("PasswordStrength", score >= 4 ? "Strong" : (score >= 2 ? "Medium" : "Weak"));
-        }
     });
+    
+      // Send value back to Storyline
+     function submitToStoryline() {
+       if (window.parent && window.parent.GetPlayer) {
+         const player = window.parent.GetPlayer();
+         player.SetVar("PasswordStrength", score >= 4 ? "Strong" : (score >= 2 ? "Medium" : "Weak"));
+       }
+     }
   </script>
-<button onclick="submitToStoryline()">Submit your password strength</button>
   <p></p>
   <p></p>
   <p> The zxcvbn programmers were inspired by this xkcd comic:</p>
